--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: ruby
 rvm:
   - 2.0.0
 env:
-  - DB=sqlite3
+  - DB=sqlite
 script:
+  - bundle exec rspec spec
   - RAILS_ENV=test
   - bundle exec rake db:create RAILS_ENV=test
   - bundle exec rake db:migrate RAILS_ENV=test
