my first commit

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ rvm:
 env:
   - DB=sqlite
 script:
-  - bundle exec rspec spec
-  - RAILS_ENV=test
+  #- RAILS_ENV=test
   - bundle exec rake db:create RAILS_ENV=test
   - bundle exec rake db:migrate RAILS_ENV=test
   - bundle exec rspec spec/
